# claw

./: .gitignore  README.md  build.gradle.kts  build.sh  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  termux_pty.cpp
app/src/main/java/com/termux/deepseek/: DeepSeekActivity.java  DeepSeekBridge.kt  MainActivity.kt  SetupActivity.kt  TerminalActivity.kt
app/src/main/java/com/termux/terminal/: ByteQueue.java  JNI.java  KeyHandler.java  Logger.java  TerminalBuffer.java  TerminalColors.java  TerminalEmulator.java  TerminalOutput.java  TerminalRow.java  TerminalSession.java  TerminalSessionClient.java  TextStyle.java  WcWidth.java
app/src/main/java/com/termux/view/: TerminalRenderer.java  TerminalView.java
app/src/main/res/drawable/: edit_text_background.xml
app/src/main/res/layout/: activity_deepseek.xml  activity_main.xml  activity_setup.xml  activity_terminal.xml  dialog_api_key.xml
app/src/main/res/menu/: menu_terminal.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: api.rs  config.rs  context.rs  engine.rs  lib.rs  main.rs  session.rs
app/src/main/rust/src/api/: mod.rs
app/src/main/rust/src/tools/: file_ops.rs  git_ops.rs  mod.rs  shell_exec.rs  web_search.rs
