[package]
name = "termux-deepseek"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deepseek-tui"
path = "src/main.rs"

[lib]
name = "deepseek_tui"
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
futures = "0.3"
parking_lot = "0.12"
dirs = "5.0"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
